Implementando backend funcionalidade usuário

--- a/financas/back-end/financas-api/financas-api/appsettings.json
+++ b/financas/back-end/financas-api/financas-api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=LEONARDO\\SQLEXPRESS; database=GerenciadorFinanceiro; user id=Leonardo; password=12345;"
+  }
 }
