--- a/financas/back-end/financas-api/financas-dominio/financas-dominio.csproj
+++ b/financas/back-end/financas-api/financas-dominio/financas-dominio.csproj
@@ -4,12 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>financas_dominio</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Entidade\" />
-    <Folder Include="Interface\" />
     <Folder Include="Enum\" />
   </ItemGroup>
 
