--- a/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
+++ b/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
@@ -9,20 +9,19 @@
     }
   },
   "profiles": {
-    "financas_api": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:7255;http://localhost:5179",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
+    //"financas_api": {
+    //  "commandName": "Project",
+    //  "dotnetRunMessages": true,
+    //  "launchBrowser": true,
+    //  "launchUrl": "weatherforecast",
+    //  "applicationUrl": "https://localhost:7255;http://localhost:5179",
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Development"
+    //  }
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
