--- a/financas/back-end/financas-api/financas-api/financas-api.csproj
+++ b/financas/back-end/financas-api/financas-api/financas-api.csproj
@@ -8,7 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\financas-negocios\financas-negocio.csproj" />
+    <ProjectReference Include="..\financas-repositorio\financas-repositorio.csproj" />
   </ItemGroup>
 
 </Project>
