Ajuste conexão com o frontend

--- a/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
+++ b/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
@@ -21,9 +21,19 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "",
+      "launchUrl": "usuario/lista",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "financas-api.API": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "usuario/lista",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIROMENT": "Development"
       }
     }
   }
