--- a/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
+++ b/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
@@ -1,39 +1,70 @@
-﻿{
+﻿//{
+//  "$schema": "https://json.schemastore.org/launchsettings.json",
+//  "iisSettings": {
+//    "windowsAuthentication": false,
+//    "anonymousAuthentication": true,
+//    "iisExpress": {
+//      "applicationUrl": "https://localhost:44331",
+//      "sslPort": 44331
+//    }
+//  },
+//  "profiles": {
+//    //"financas_api": {
+//    //  "commandName": "Project",
+//    //  "dotnetRunMessages": true,
+//    //  "launchBrowser": true,
+//    //  "launchUrl": "weatherforecast",
+//    //  "applicationUrl": "https://localhost:7255;http://localhost:5179",
+//    //  "environmentVariables": {
+//    //    "ASPNETCORE_ENVIRONMENT": "Development"
+//    //  }
+//    "IIS Express": {
+//      "commandName": "IISExpress",
+//      "launchBrowser": true,
+//      "launchUrl": "api/Usuario/ObterTodos",
+//      "environmentVariables": {
+//        "ASPNETCORE_ENVIRONMENT": "Development"
+//      }
+//    },
+//    "financas-api.API": {
+//      "commandName": "Project",
+//      "dotnetRunMessages": true,
+//      "launchBrowser": true,
+//      "launchUrl": "api/Usuario/ObterTodos",
+//      "applicationUrl": "https://localhost:44331;http://localhost:5000",
+//      "environmentVariables": {
+//        "ASPNETCORE_ENVIROMENT": "Development"
+//      }
+//    }
+//  }
+//}
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43908",
+      "applicationUrl": "https://localhost:44331",
       "sslPort": 44331
     }
   },
   "profiles": {
-    //"financas_api": {
-    //  "commandName": "Project",
-    //  "dotnetRunMessages": true,
-    //  "launchBrowser": true,
-    //  "launchUrl": "weatherforecast",
-    //  "applicationUrl": "https://localhost:7255;http://localhost:5179",
-    //  "environmentVariables": {
-    //    "ASPNETCORE_ENVIRONMENT": "Development"
-    //  }
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "usuario/lista",
+      "launchUrl": "api/Usuario/ObterTodos",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "financas-api.API": {
+    "financas-api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "usuario/lista",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "api/Usuario/ObterTodos",
+      "applicationUrl": "https://localhost:44331;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIROMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
