--- a/financas/back-end/financas-api/financas-api/appsettings.json
+++ b/financas/back-end/financas-api/financas-api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=LEONARDO\\SQLEXPRESS; database=GerenciadorFinanceiro; user id=Leonardo; password=12345;"
+    "DefaultConnection": "server=LEONARDO\\SQLEXPRESS; database=Financa; user id=Leonardo; password=12345;"
   }
 }
