--- a/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
+++ b/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
@@ -52,7 +52,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/Usuario/ObterTodos",
+      "launchUrl": "api/Usuario/ObterTodosUsuarios",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -61,7 +61,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/Usuario/ObterTodos",
+      "launchUrl": "api/Usuario/ObterTodosUsuarios",
       "applicationUrl": "https://localhost:44331;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
