Ajustes mapeamento de classes

--- a/financas/back-end/financas-api/financas-api/appsettings.json
+++ b/financas/back-end/financas-api/financas-api/appsettings.json
@@ -5,8 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+
+  //"AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "server=CSILVA\\SQLEXPRESS; database=Financa; user id=gms; password=gms120605;"
+  //}
+
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=LEONARDO\\SQLEXPRESS; database=Financa; user id=Leonardo; password=12345;"
   }
+
 }
+
+
+
+
