--- a/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
+++ b/financas/back-end/financas-api/financas-api/Properties/launchSettings.json
@@ -1,43 +1,4 @@
-﻿//{
-//  "$schema": "https://json.schemastore.org/launchsettings.json",
-//  "iisSettings": {
-//    "windowsAuthentication": false,
-//    "anonymousAuthentication": true,
-//    "iisExpress": {
-//      "applicationUrl": "https://localhost:44331",
-//      "sslPort": 44331
-//    }
-//  },
-//  "profiles": {
-//    //"financas_api": {
-//    //  "commandName": "Project",
-//    //  "dotnetRunMessages": true,
-//    //  "launchBrowser": true,
-//    //  "launchUrl": "weatherforecast",
-//    //  "applicationUrl": "https://localhost:7255;http://localhost:5179",
-//    //  "environmentVariables": {
-//    //    "ASPNETCORE_ENVIRONMENT": "Development"
-//    //  }
-//    "IIS Express": {
-//      "commandName": "IISExpress",
-//      "launchBrowser": true,
-//      "launchUrl": "api/Usuario/ObterTodos",
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
-//      }
-//    },
-//    "financas-api.API": {
-//      "commandName": "Project",
-//      "dotnetRunMessages": true,
-//      "launchBrowser": true,
-//      "launchUrl": "api/Usuario/ObterTodos",
-//      "applicationUrl": "https://localhost:44331;http://localhost:5000",
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIROMENT": "Development"
-//      }
-//    }
-//  }
-//}
+﻿
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
@@ -52,7 +13,8 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/Usuario/ObterUsuariosComPerfil",
+      "launchUrl": "api/Home/Login",
+      //"launchUrl": "api/Usuario/ObterUsuariosComPerfil",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -61,7 +23,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/Usuario/ObterUsuariosComPerfil",
+      "launchUrl": "api/Home/Login",
+      //"launchUrl": "api/Usuario/ObterUsuariosComPerfil",
       "applicationUrl": "https://localhost:44331;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
