--- a/financas/back-end/financas-api/financas-api/appsettings.json
+++ b/financas/back-end/financas-api/financas-api/appsettings.json
@@ -16,6 +16,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=LEONARDO\\SQLEXPRESS; database=Financa; user id=Leonardo; password=12345;"
+  },
+
+  "JwtSettings": {
+    "Secret": "YESHUA@gms.120605JAVEYRE.33!@@¨@%",
+    "Issuer": "http://localhost",
+    "Audience": "http://localhost",
+    "ExpirationMinutes":  60
   }
 
 }
