--- a/financas/back-end/financas-api/financas-api/appsettings.json
+++ b/financas/back-end/financas-api/financas-api/appsettings.json
@@ -12,17 +12,21 @@
   //  "DefaultConnection": "server=CSILVA\\SQLEXPRESS; database=Financa; user id=gms; password=gms120605;"
   //}
 
-
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=LEONARDO\\SQLEXPRESS; database=Financa; user id=Leonardo; password=12345;"
+    "DefaultConnection": "server=LEONARDO\\SQLEXPRESS; database=FinancaTESTE; user id=Leonardo; password=12345;"
   },
+
+  //"AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "server=LEONARDO\\SQLEXPRESS; database=Financa; user id=Leonardo; password=12345;"
+  //},
 
   "JwtSettings": {
     "Secret": "YESHUA@gms.120605JAVEYRE.33!@@¨@%",
     "Issuer": "http://localhost",
     "Audience": "http://localhost",
-    "ExpirationMinutes":  60
+    "ExpirationMinutes": 60
   }
 
 }
