--- a/financas/back-end/financas-api/financas-dominio/financas-dominio.csproj
+++ b/financas/back-end/financas-api/financas-dominio/financas-dominio.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Enum\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
